Added fetch request for get spots

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Boilerplate</title>
+  <title>Monterey Surf Report</title>
 </head>
 
 <body>
   <h1>Monterey Surf Report</h1>
+  <div id="spots"></div>
   <script src="/js/bundle.js"></script>
 </body>
 
