--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
 <body>
   <h1>Monterey Surf Report</h1>
   <div id="spots"></div>
+
+  <div class="spot">
+    <h3 id="spot-name"></h3>
+    <canvas id="waveHeightChart" width="400" height="400"></canvas>
+  </div>
+
   <script src="/js/bundle.js"></script>
 </body>
 
