--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
   <h1>Monterey Surf Report</h1>
   <div id="spots"></div>
 
-  <div class="spot">
+  <div id="spot">
     <h3 id="spot-name"></h3>
-    <canvas id="waveHeightChart" width="400" height="400"></canvas>
+    <!-- <canvas id="waveHeightChart" width="400" height="400"></canvas> -->
   </div>
 
   <script src="/js/bundle.js"></script>
