--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,8 @@
 
 <body>
   <h1>Monterey Surf Report</h1>
+  <div id="available-spots"></div>
   <div id="spots"></div>
-
-  <div id="spot">
-    <h3 id="spot-name"></h3>
-    <!-- <canvas id="waveHeightChart" width="400" height="400"></canvas> -->
-  </div>
 
   <script src="/js/bundle.js"></script>
 </body>
