--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <body>
   <h1>Monterey Surf Report</h1>
   <div id="available-spots"></div>
+  <div id="water-temp"></div>
   <div id="spots"></div>
 
   <script src="/js/bundle.js"></script>
