Added the wind speed to the wind speed element

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <h1>Monterey Surf Report</h1>
   <div id="available-spots"></div>
   <div id="water-temp"></div>
+  <div id="wind-speed"></div>
   <div id="spots"></div>
 
   <script src="/js/bundle.js"></script>
