Added wind speed chart and refactoring chart functions

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <div id="available-spots"></div>
   <div id="water-temp"></div>
   <div id="wind-speed"></div>
+  <div id="wind-speed-chart"></div>
   <div id="spots"></div>
 
   <script src="/js/bundle.js"></script>
