Added toggle to show and hide wind speed chart

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
   <div id="available-spots"></div>
   <div id="water-temp"></div>
   <div id="wind-speed"></div>
-  <div id="wind-speed-chart"></div>
+
+  <button id="toggle-wind-speed-chart">Show wind speed chart</button>
+  <div id="wind-speed-chart" style="display: none;"></div>
   <div id="spots"></div>
 
   <script src="/js/bundle.js"></script>
