--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Monterey Surf Report</h1>
+  <div id="current-date"></div>
   <div id="available-spots"></div>
   <div id="water-temp"></div>
   <div id="wind-speed"></div>
