--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="bundle.css">
   <title>Monterey Surf Report</title>
 </head>
 
@@ -19,7 +20,7 @@
   <div id="wind-speed-chart" style="display: none;"></div>
   <div id="spots"></div>
 
-  <script src="/js/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
