--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="bundle.css">
   <title>Monterey Surf Report</title>
 </head>
 
 <body>
-  <h1>Monterey Surf Report</h1>
-  <div id="current-date"></div>
+  <header class="header">
+    <h1 class="heading-primary">Monterey Surf Report</h1>
+    <span id="current-date" class="header__date"></span>
+  </header>
+
   <div id="available-spots"></div>
   <div id="water-temp"></div>
   <div id="wind-speed"></div>
