Styled the avaliable spots widget

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,11 @@
     <span id="current-date" class="header__date"></span>
   </header>
 
-  <div id="available-spots"></div>
+  <div class="available-spots widget">
+    <span class="available-spots__title">Avaliable spots in this location:</span>
+    <p class="available-spots__text"></p>
+  </div>
+
   <div id="water-temp"></div>
   <div id="wind-speed"></div>
 
