Styled the water temperature widget

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,10 @@
     <p class="available-spots__text"></p>
   </div>
 
-  <div id="water-temp"></div>
+  <div class="water-temp widget">
+    <div class="water-temp-text"></div>
+  </div>
+
   <div id="wind-speed"></div>
 
   <button id="toggle-wind-speed-chart">Show wind speed chart</button>
