--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="bundle.css">
   <title>Monterey Surf Report</title>
 </head>
@@ -22,12 +24,17 @@
   </div>
 
   <div class="water-temp widget">
-    <div class="water-temp-text"></div>
+    <p class="water-temp__text"></p>
   </div>
 
-  <div id="wind-speed"></div>
+  <div class="wind-speed widget">
+    <p class="wind-speed__text"></p>
+    <button class="toggle-wind-speed-chart">
+      Show wind speed chart
+      <i class="fa fa-caret-down toggle-wind-speed-chart__caret" aria-hidden="true"></i>
+    </button>
+  </div>
 
-  <button id="toggle-wind-speed-chart">Show wind speed chart</button>
   <div id="wind-speed-chart" style="display: none;"></div>
   <div id="spots"></div>
 
