--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,10 @@
     </button>
   </div>
 
-  <div id="wind-speed-chart" style="display: none;"></div>
+  <div class="chart">
+    <div id="wind-speed-chart" style="display: none;"></div>
+  </div>
+
   <div id="spots"></div>
 
   <script src="bundle.js"></script>
