Implemented a responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
             Show wind speed chart
             <i class="fa fa-caret-down toggle-wind-speed-chart__caret" aria-hidden="true"></i>
           </button>
-        </div>
-        <div class="chart">
-          <div id="wind-speed-chart" style="display: none;"></div>
+          <div>
+            <div id="wind-speed-chart" style="display: none;"></div>
+          </div>
         </div>
       </aside>
     </main>
